--- a/posts/final-spa-overview.mdx
+++ b/posts/final-spa-overview.mdx
@@ -146,5 +146,5 @@ I summarised the behaviour of the final SPA's web architecture. Development uses
 
 ### Next
 
-- I explain <Link href='/posts/how-to-run-the-react-js-spa'>How to Run the React SPA</Link>.
+- I explain <Link href='/posts/how-to-run-the-react-js-spa'>How to Run the Final SPA</Link>.
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
