--- a/posts/how-to-run-the-react-js-spa.mdx
+++ b/posts/how-to-run-the-react-js-spa.mdx
@@ -93,7 +93,7 @@ certs/authsamples-dev.ca.crt
 
 ### Step 7: Run the App
 
-Next start a second terminal window and run the following command, to start the web host, then run the default browser at *https://www.authsamples-dev.com*:
+Next run the following command from the original terminal window, to start the web host, then run the default browser at *https://www.authsamples-dev.com*:
 
 ```bash
 ./run.sh
